--- a/portfolio/src/components/header/header.css
+++ b/portfolio/src/components/header/header.css
@@ -1,13 +1,14 @@
 header {
     height: 100vh;
-    padding-top: 7rem;
     overflow: hidden;
 }
 
 .header__container {
     text-align: center;
-    height: 100%;
-    position: relative;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .contact__button {
