--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -17,7 +17,7 @@
     background: linear-gradient(
         45deg,
         transparent,
-        var(--color-primary),
+        white,
         transparent
     );
     display: grid;
