--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=sawp");
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +12,7 @@
 
 :root {
     --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c6c;
+    --color-bg-variant: #1a1a24;
     --color-primary: #4db5ff;
     --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #fff;
@@ -37,7 +38,7 @@ body {
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
-    background-image: url(../src/assets/bg-texture.png);
+    background-image: url(../src/assets/monophy.gif);
 }
 
 .container {
