feat: about 이미지 배경 수정

--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -17,7 +17,7 @@
     background: linear-gradient(
         45deg,
         transparent,
-        white,
+        var(--color-primary),
         transparent
     );
     display: grid;
