--- a/portfolio/src/components/portfolio/portfolio.css
+++ b/portfolio/src/components/portfolio/portfolio.css
@@ -29,7 +29,7 @@
 }
 
 .portfolio__item-title {
-    height: 5vh;
+    height: 20%;
     margin: 1.2rem 0 1rem;
     justify-content: center;
     align-items: center;
