--- a/portfolio/src/components/experience/experience.css
+++ b/portfolio/src/components/experience/experience.css
@@ -14,7 +14,7 @@
 
 .experience__container > div:hover {
     background: transparent;
-    border-color: var(--color-bg-variant);
+    border-color: var(--color-primary-variant);
     cursor: default;
 }
 
