--- a/portfolio/src/components/atomics/ListTitle/listTitle.css
+++ b/portfolio/src/components/atomics/ListTitle/listTitle.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-bottom: 0.5rem;
+    padding: 1rem 0 0.5rem 0;
 }
 
 .modalSection__circle {
