--- a/portfolio/src/components/posts/posts.css
+++ b/portfolio/src/components/posts/posts.css
@@ -10,6 +10,12 @@
     gap: 1.5rem;
 }
 
+.posts__card__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .posts__card {
     background: var(--color-bg-variant);
     border: 1px solid transparent;
@@ -24,4 +30,16 @@
   background: transparent;
     border-color: var(--color-primary-variant);
     cursor: default; 
+}
+
+.posts__image {
+    border-radius: 1.5rem;
+    height: 50%;
+    overflow: hidden;
+    margin: 1rem 2rem 1em 1rem; 
+}
+
+.posts__image img {
+    width: 100%;
+    height: 100%;
 }
