--- a/portfolio/src/components/posts/posts.css
+++ b/portfolio/src/components/posts/posts.css
@@ -43,3 +43,12 @@
     width: 100%;
     height: 100%;
 }
+
+.posts__content-title {
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.posts__content-content {
+    color: lightgray;
+}
