--- a/portfolio/src/components/posts/posts.css
+++ b/portfolio/src/components/posts/posts.css
@@ -22,7 +22,6 @@
     border-radius: 1rem;
     margin-bottom: 2rem;
     padding: 1rem;
-    /* text-align: center; */
     transition: var(--transition);
 }
 
@@ -34,14 +33,8 @@
 
 .posts__image {
     border-radius: 1.5rem;
-    height: 50%;
     overflow: hidden;
     margin: 1rem 2rem 1em 1rem; 
-}
-
-.posts__image img {
-    width: 100%;
-    height: 100%;
 }
 
 .posts__content-title {
@@ -51,4 +44,18 @@
 
 .posts__content-content {
     color: lightgray;
+}
+
+@media screen and (max-width: 1024px) {
+    .posts__card__container {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .posts__card__container {
+        display: flex;
+        flex-direction: column;
+    }
 }
