--- a/portfolio/src/components/posts/posts.css
+++ b/portfolio/src/components/posts/posts.css
@@ -33,8 +33,15 @@
 
 .posts__image {
     border-radius: 1.5rem;
-    overflow: hidden;
     margin: 1rem 2rem 1em 1rem; 
+    height: 10rem;
+    width: 30%;
+    overflow: hidden;
+}
+
+.posts__image img {
+    width: 100%;
+    height: 100%;
 }
 
 .posts__content-title {
@@ -50,6 +57,14 @@
     .posts__card__container {
         display: flex;
         flex-direction: column;
+    }
+
+    .posts__image {
+        border-radius: 1.5rem;
+        height: 10rem;
+        width: 100%;
+        margin-left: 2rem;
+        
     }
 }
 
