feat: 이미지 처리 및 more 버튼 추가

--- a/portfolio/src/components/posts/posts.css
+++ b/portfolio/src/components/posts/posts.css
@@ -4,6 +4,13 @@
     align-items: center;
 }
 
+.posts__more {
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    margin: 0 0.1rem 1rem 0;
+}
+
 .posts__cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
